--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
 
 <head>
   <meta charset="UTF-8">
+  <title>Inspire</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="icon" href="https://bcw.blob.core.windows.net/public/img/9977764104160066">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/MaterialDesign-Webfont/7.0.96/css/materialdesignicons.min.css"
     integrity="sha512-fXnjLwoVZ01NUqS/7G5kAnhXNXat6v7e3M9PhoMHOTARUMCaf5qNO84r5x9AFf5HDzm3rEZD8sb/n6dZ19SzFA=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="assets/style/main.css">
   <link rel="stylesheet" href="assets/style/style.css">
-  <title>inspire</title>
+  <link rel="icon" href="https://bcw.blob.core.windows.net/public/img/9977764104160066">
 </head>
 
 <body>
@@ -33,14 +33,20 @@
           <!-- NAVLINKS -->
           <!-- <a href="#/about" class="nav-link">About</a> -->
         </div>
+        <div class="ms-auto d-flex align-items-center" id="authstate">
+        </div>
       </div>
-      <div class="flex-grow-1 justify-content-end align-items-center d-flex" id="authstate"></div>
     </nav>
   </header>
 
   <!-- SECTION -->
-  <main>
-    <div id="main-content"></div>
+  <main class="container=fluid">
+    <div class="row vh-100">
+      <div
+        class="col-12 d-flex flex-column justify-content-center align-items-center text-center text-white position-relative">
+
+      </div>
+    </div>
   </main>
 
   <!-- SECTION -->
