Background image will be set via javascript

--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
     <div class="row vh-100">
       <div
         class="col-12 d-flex flex-column justify-content-center align-items-center text-center text-white position-relative">
-
+        <div id="background-overlay" class="position-absolute top-0 start-0 w-100 h-100"></div>
+        <!-- Clock -->
       </div>
     </div>
   </main>
