--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
         class="col-12 d-flex flex-column justify-content-center align-items-center text-center text-white position-relative">
         <div id="background-overlay" class="position-absolute top-0 start-0 w-100 h-100"></div>
         <div id="clock" class="mb-3"></div>
+        <div id="greeting" class="mb-3"></div>
       </div>
     </div>
   </main>
