--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
         <div id="background-overlay" class="position-absolute top-0 start-0 w-100 h-100"></div>
         <div id="clock" class="mb-3"></div>
         <div id="greeting" class="mb-3"></div>
+        <div id="quote" class="mb-3"></div>
       </div>
-    </div>
   </main>
 
   <!-- SECTION -->
