--- a/index.html
+++ b/index.html
@@ -48,7 +48,10 @@
         <div id="clock" class="mb-3"></div>
         <div id="greeting" class="mb-3"></div>
         <div id="quote" class="mb-3"></div>
+        <div id="weather" class="mb-3"></div>
       </div>
+    </div>
+    </div>
   </main>
 
   <!-- SECTION -->
