--- a/index.html
+++ b/index.html
@@ -51,6 +51,19 @@
         <div id="weather" class="mb-3"></div>
       </div>
     </div>
+    <div id="todo-app" class="container">
+      <div class="row justify-content-center">
+        <div class="col-md-6 bg-light p-4 rounded">
+          <h3 class="text-center mb-3">Todo List</h3>
+          <form id="todo-form" onsubmit="app.todoController.addTodo()" class="d-flex mb-3">
+            <input type="text" name="description" class="form-control me-2" placeholder="New Todo" required>
+            <button type="submit" class="btn btn-primary">Add</button>
+          </form>
+          <div id="todo-count" class="text-end mb-2"></div>
+          <div id="todos" class="list-group">
+          </div>
+        </div>
+      </div>
     </div>
   </main>
 
